cleaned up the codebase better